# guard-dispatch

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
.claude/: settings.json
.claude/hooks/: post-edit.sh  pre-tool.sh
.claude/skills/: migration.md  pr-review.md  rust-service.md  websocket.md
.github/: PULL_REQUEST_TEMPLATE_pin_rate_limit.md
.github/workflows/: ci.yml  deploy.yml
database/migrations/: 001_create_auth_schema.sql  002_create_booking_schema.sql  003_create_tracking_schema.sql  004_create_notification_schema.sql  005_create_chat_schema.sql  006_create_audit_schema.sql  007_add_booking_indexes.sql  008_create_otp_table.sql  009_widen_otp_code_column.sql  010_add_approval_status.sql  011_nullable_user_role.sql  012_create_guard_profiles.sql  013_add_booking_price_fields.sql  014_create_reviews_schema.sql  015_create_customer_profiles.sql  016_add_customer_profile_fields.sql  017_add_customer_profile_approval.sql  018_create_service_rates.sql  019_booking_flow_enhancements.sql  020_chat_sender_role_and_read_receipts.sql  021_pending_completion_status.sql  022_awaiting_payment_status.sql  023_backfill_notification_target_role.sql  024_add_video_message_type.sql  025_assignment_checkin_locations.sql  026_assignment_checkin_place_names.sql  027_assignment_started_completion_places.sql  028_create_progress_reports.sql  029_progress_report_media.sql  030_guard_locations_is_online.sql  031_location_history_retention.sql  032_document_expiry_dates.sql  033_fix_progress_reports_hour_zero.sql  034_otp_code_text.sql  035_add_review_visibility.sql  036_payment_cost_summary.sql  037_service_rates_single_price.sql  038_remove_price_per_hour.sql  039_payment_amount_positive.sql  040_service_rate_bounds.sql  (+5 more)
docs/: DEVELOPER_GUIDE.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.ts
docs/issues/: chat-media-presigned-url-expiry.md  pin-login-rate-limit.md
docs/pages/: activity.md  applicants.md  automation.md  customers.md  dashboard.md  guards.md  login.md  map.md  pricing.md  profile.md  recruitment.md  reports.md  reviews.md  settings.md  tasks.md  wallet.md
docs/screens/: call.md  chat-list.md  chat.md  customer-login.md  guard-login.md  notification.md  otp-verification.md  phone-input.md  pin-lock.md  pin-setup.md  role-selection.md
docs/screens/guard/: application-status.md  contact-support.md  dashboard.md  home-tab.md  income-tab.md  jobs-tab.md  profile-settings.md  profile-tab.md  ratings-reviews.md  registration.md  work-history.md
docs/screens/hirer/: booking.md  dashboard.md  guard-selection.md  history.md  payment.md  profile-settings.md  profile.md  service-selection.md
frontend/mobile/: README.md  pubspec.yaml
frontend/mobile/android/: settings.gradle.kts
frontend/mobile/android/app/: build.gradle.kts
frontend/mobile/ios/Runner/: Info.plist
frontend/mobile/ios/Runner.xcodeproj/: project.pbxproj
frontend/mobile/lib/: main.dart
frontend/mobile/lib/l10n/: app_strings.dart
frontend/mobile/lib/providers/: auth_provider.dart  booking_provider.dart  chat_provider.dart  notification_provider.dart  tracking_provider.dart
frontend/mobile/lib/screens/: app_settings_screen.dart  call_screen.dart  chat_list_screen.dart  chat_screen.dart  customer_login_screen.dart  customer_registration_screen.dart  dashboard_screen.dart  guard_login_screen.dart  guard_registration_screen.dart  incoming_call_screen.dart  live_map_screen.dart  notification_screen.dart  otp_verification_screen.dart  phone_input_screen.dart  pin_lock_screen.dart  pin_login_screen.dart  pin_setup_screen.dart  registration_form_screen.dart  registration_pending_screen.dart  registration_role_screen.dart  role_selection_screen.dart  set_password_screen.dart  withdrawal_approval_screen.dart
frontend/mobile/lib/services/: api_client.dart  auth_service.dart  booking_service.dart  call_service.dart  chat_service.dart  language_service.dart  notification_service.dart  pin_storage_service.dart  push_notification_bootstrap.dart  receipt_pdf.dart  tracking_service.dart
frontend/mobile/lib/theme/: colors.dart
frontend/mobile/lib/utils/: thai_baht_text.dart
frontend/mobile/lib/widgets/: language_toggle.dart  pin_dots_indicator.dart  pin_keypad.dart
frontend/mobile/linux/: CMakeLists.txt
frontend/mobile/linux/runner/: my_application.cc
frontend/mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/mobile/test/: guard_registration_test.dart  thai_baht_text_test.dart  widget_test.dart
frontend/mobile/web/: index.html  manifest.json
frontend/mobile/windows/: CMakeLists.txt
frontend/mobile/windows/runner/: Runner.rc  (+1 more)
frontend/web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
frontend/web/app/: globals.css  layout.tsx
frontend/web/components/: AdminOnly.tsx  AuthProvider.tsx  Header.tsx  LanguageProvider.tsx  RequireAuth.tsx  Sidebar.tsx  ThemeProvider.tsx
frontend/web/lib/: api.ts  i18n.ts  utils.ts
nginx/: nginx.conf  nginx.prod.conf
scripts/: reset-staging.sh  reset-staging.sql
services/auth/: Cargo.toml  Dockerfile
services/auth/src/: handlers.rs  main.rs  models.rs  service.rs  state.rs
services/auth/tests/: integration_tests.rs
services/booking/: Cargo.toml  Dockerfile
services/booking/src/: handlers.rs  main.rs  models.rs  s3.rs  service.rs  state.rs
services/chat/: Cargo.toml  Dockerfile
services/chat/src/: handlers.rs  main.rs  models.rs  s3.rs  service.rs  state.rs  transcode.rs
services/mediasoup/: Dockerfile  package-lock.json  package.json
services/mediasoup/src/: index.js
services/notification/: Cargo.toml  Dockerfile
services/notification/src/: fcm.rs  handlers.rs  main.rs  models.rs  service.rs  state.rs
services/shared/: Cargo.toml
services/shared/src/: audit.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  models.rs  openapi.rs  otp.rs  redis_client.rs  sms.rs
services/tracking/: Cargo.toml  Dockerfile
services/tracking/src/: handlers.rs  main.rs  models.rs  service.rs  state.rs
(+65 files in other folders)
