[workspace]
resolver = "2"
members = [
    "services/shared",
    "services/auth",
    "services/booking",
    "services/tracking",
    "services/notification",
    "services/chat",
]

# Workspace-wide dependency versions (shared across all members)
[workspace.dependencies]
axum            = { version = "0.8", features = ["ws", "multipart"] }
tokio           = { version = "1", features = ["full"] }
sqlx            = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal"] }
redis           = { version = "0.27", features = ["tokio-comp"] }
serde           = { version = "1", features = ["derive"] }
serde_json      = "1"
jsonwebtoken    = "9"
uuid            = { version = "1", features = ["v4", "serde"] }
chrono          = { version = "0.4", features = ["serde"] }
tower           = "0.5"
tower-http      = { version = "0.6", features = ["cors", "trace"] }
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror       = "2"
anyhow          = "1"
dotenvy         = "0.15"
# Chat service — S3/MinIO object storage
aws-sdk-s3      = "1"
bytes           = "1"
# HTTP client (notification FCM + chat signed URL)
reqwest         = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Password hashing
argon2          = "0.5"
# Random number generation (OTP codes)
rand            = "0.8"
# Constant-time comparison (OTP verification)
subtle          = "2"
# OpenAPI / Swagger UI
utoipa           = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# Decimal type for NUMERIC/DECIMAL columns
rust_decimal    = { version = "1", features = ["serde-float"] }
# Shared library
shared          = { path = "services/shared" }

