[package]
name    = "tracking-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tracking-service"
path = "src/main.rs"

[dependencies]
axum            = { workspace = true }
tokio           = { workspace = true }
sqlx            = { workspace = true }
redis           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
jsonwebtoken    = { workspace = true }
uuid            = { workspace = true }
chrono          = { workspace = true }
tower           = { workspace = true }
tower-http      = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror       = { workspace = true }
anyhow          = { workspace = true }
dotenvy         = { workspace = true }
